Fix horizontal scroll issue on material-ui Grid.

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   font-family: "Calibri", Times, sans-serif;
   color: var(--text);
   background-color: var(--background);
+  overflow-x: hidden;
 }
 
 .header {
